[package]
name = "str-distance"
version = "0.1.0"
authors = ["Matthias Seitz <matthias.seitz@tum.de>"]
edition = "2018"
license = "MIT OR Apache-2.0"
categories = ["Text processing", "nlp"]
keywords = ["string", "distance", "similarity", "Levenshtein", "Jaro"]
description = "Distance metrics to evaluate distances between strings."
documentation = "https://docs.rs/str-distance/"

repository = "https://github.com/mattsse/str-distance"

[badges]
travis-ci = { repository = "https://github.com/mattsse/str-distance" }

[dev-dependencies]
strsim = "0.10.0"
